# StarXP_Capsule

DrawPic/: CompareCircutity.C  CompareEllipcity.C  CompareSumHit.C  CompareTrackL.C  EnergyFit6_4keV.C  EnergyFit8keV.C  ErrorAngle.c  ModulationPlot.C
DrawPic/Data/: 6_4keV_MC_GMCP.root
star-xp/: CMakeLists.txt  README.md
star-xp/mac/: run.mac
star-xp/source/: README
star-xp/source/0-Simulation/: AddCommand.mac  CMakeLists.txt  README.md  SimuCard.card  starXP.cc
star-xp/source/0-Simulation/AnalysisManager/include/: MyAnalysisManager.hh  MyG4BasedAnalysis.hh  MyG4CoinSysAnalysis.hh  MyRootBasedAnalysis.hh
star-xp/source/0-Simulation/AnalysisManager/src/: MyAnalysisManager.cc  MyG4BasedAnalysis.cc  MyG4CoinSysAnalysis.cc  MyRootBasedAnalysis.cc
star-xp/source/0-Simulation/CosmicRayGenerator/include/: AtmosphericAlbedoPhoton.hh  CosmicRay.hh  CosmicRayList.hh  CosmicXrayBackground.hh  GPSFromMAC.hh  GammaRayBursts.hh  PrimaryCosmicRayElectron.hh  PrimaryCosmicRayProton.hh  SecondaryParticleElectron.hh  SecondaryParticleProton.hh  SimpleParticleGun.hh  SouthAtlanticAnomaly.hh  StokesVector.hh
star-xp/source/0-Simulation/CosmicRayGenerator/src/: AtmosphericAlbedoPhoton.cc  CosmicRay.cc  CosmicRayList.cc  CosmicXrayBackground.cc  GPSFromMAC.cc  GammaRayBursts.cc  PrimaryCosmicRayElectron.cc  PrimaryCosmicRayProton.cc  SecondaryParticleElectron.cc  SecondaryParticleProton.cc  SimpleParticleGun.cc  SouthAtlanticAnomaly.cc
star-xp/source/0-Simulation/DetectorConstruction/gdml/: CoinSys.gdml  CubeSat_det_v03.xml
star-xp/source/0-Simulation/DetectorConstruction/gdml/Material/: Material.xml
star-xp/source/0-Simulation/DetectorConstruction/gdml/Material/Predefined/GasMixture/lists/: GasMixture.xml
star-xp/source/0-Simulation/DetectorConstruction/gdml/Material/Predefined/Opticals/include/: MyReadData.cpp  MyReadData.h
star-xp/source/0-Simulation/DetectorConstruction/gdml/Structure/Arrange/: aCopy.gdml
star-xp/source/0-Simulation/G4Actions/include/: MyActionInitialization.hh  MyRunManager.hh
star-xp/source/0-Simulation/G4Actions/src/: MyActionInitialization.cc  MyRunManager.cc
star-xp/source/0-Simulation/ParticleSource/include/: MyParticleGun.hh  MyPrimaryGeneratorGPS.hh
star-xp/source/0-Simulation/ParticleSource/src/: MyParticleGun.cc  MyPrimaryGeneratorGPS.cc
star-xp/source/0-Simulation/PhysicsList/src/: MyPhysListEM.cc  MyPhysicsList.cc
star-xp/source/1-Digitization/: CMakeLists.txt  DigiCard.yml  DigiMapScan.C  DigiScan.C  Digitize.cc  SimplePlot.C
star-xp/source/1-Digitization/CalibFiles/: DiffFilter.card  Ne_70_DME_30.yml  pededata.root
star-xp/source/1-Digitization/EventControl/include/: EventAction.hh  GMCPAction.hh  Multiplication.hh  StepAction.hh
star-xp/source/1-Digitization/EventControl/src/: EventAction.cc  GMCPAction.cc  Multiplication.cc  StepAction.cc
star-xp/source/1-Digitization/Filter/include/: BasicFilter.hh  Diff3FrameFilter.hh  DiffFilter.hh  FilterCreator.hh  SaveAllFilter.hh
star-xp/source/1-Digitization/Filter/src/: BasicFilter.cc  Diff3FrameFilter.cc  DiffFilter.cc  FilterCreator.cc  SaveAllFilter.cc
star-xp/source/1-Digitization/RootIO/include/: InputFileReader.hh  OutputFileWriter.hh
star-xp/source/1-Digitization/RootIO/src/: InputFileReader.cc  OutputFileWriter.cc
star-xp/source/1-Digitization/TimeControl/include/: TimeAction.hh  TimeControl.hh  TimeLine.hh  YamlConfig.hh
star-xp/source/1-Digitization/TimeControl/src/: TimeAction.cc  TimeControl.cc  TimeLine.cc  YamlConfig.cc
star-xp/source/1-Digitization/TopMetal/include/: Pixel.hh  SDBox.hh  SDBoxContainer.hh  TopMetal.hh  TopMetalContainer.hh
star-xp/source/1-Digitization/TopMetal/src/: Pixel.cc  SDBox.cc  SDBoxContainer.cc  TopMetal.cc  TopMetalContainer.cc
star-xp/source/1.6-QuickAna/: CMakeLists.txt  QuickAna.cc  QuickAnaCard.card  ReadRoot.C  check.C  cutdata.C  reconstruction.txt
star-xp/source/1.6-QuickAna/CalibFiles/: decay.root
star-xp/source/1.6-QuickAna/include/: Combine.h  Feature.h  MyEventClass.h  MyMethodClass.h  PixelTimeFix.h  ReadCard.h  StringConver.h  trackHandle.h  trackStruct.h
star-xp/source/1.6-QuickAna/src/: Combine.cpp  Feature.cpp  MyEventClass.cpp  PixelTimeFix.cpp  StringConver.cpp  trackHandle.cpp
star-xp/source/CommonLib/: CMakeLists.txt
star-xp/source/CommonLib/SimEvent/: Linkdef.h  SimTrack.h
